corrected mobile responsiveness on iphone x

--- a/friends_quiz/style.css
+++ b/friends_quiz/style.css
@@ -92,7 +92,7 @@ button:hover{
   }
 
   button{
-    margin-top: 350px;
+    margin-top: 300px;
     display: inline-block;
     font-size: 12px;
   }
